UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_SAP_Integration__c.object
<CustomObject>
    <description>used to be as staging table to get data from SAP of Customers, Products, cost details</description>
    <fields>
        <fullName>Phoenix_Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SAP Integration</label>
    <nameField>
        <displayFormat>SAP-{0000000000}</displayFormat>
        <label>SAP Integration Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>